--- a/index.html
+++ b/index.html
@@ -23,25 +23,30 @@
             <i class="fas fa-bars"></i>
           </button>
         </div>
+        <!-- nav links -->
+        <ul class="nav-links">
+          <li>
+            <a href="index.html">home</a>
+          </li>
+          <li>
+            <a href="about.html">about</a>
+          </li>
+          <li>
+            <a href="project.html">projects</a>
+          </li>
+          <li>
+            <a href="contact.html">contact</a>
+          </li>
+        </ul>
       </div>
-      <!-- nav links -->
-      <ul class="nav-links">
-        <li>
-          <a href="index.html">home</a>
-        </li>
-        <li>
-          <a href="about.html">about</a>
-        </li>
-        <li>
-          <a href="project.html">projects</a>
-        </li>
-        <li>
-          <a href="contact.html">contact</a>
-        </li>
-      </ul>
     </nav>
     <!-- end of navbar -->
     <!-- sidebar -->
+    <aside class="sidebar" id="sidebar">
+      <div>
+        <button class="close-btn" id=""></button>
+      </div>
+    </aside>
 
     <!-- end of sidebar -->
     <!-- header -->
