--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- sidebar -->
     <aside class="sidebar" id="sidebar">
       <div>
-        <button class="close-btn" id="">
+        <button class="close-btn" id="close-btn">
           <i class="fas fa-times"></i>
         </button>
         <ul class="sidebar-links">
@@ -94,7 +94,47 @@
 
     <!-- end of sidebar -->
     <!-- header -->
-
+    <header class="hero">
+      <div class="section-center hero-center">
+        <article class="hero-info">
+          <div class="underline"></div>
+          <h1>I'm john</h1>
+          <h4>freelance web and mobile UI/UX Designer</h4>
+          <a href="contact.html" class="btn hero-btn">hire me</a>
+          <!-- social icons -->
+          <ul class="social-icons hero-icon">
+            <li>
+              <a href="#" class="social-icon">
+                <i class="fab fa-facebook"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="social-icon">
+                <i class="fab fa-linkedin"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="social-icon">
+                <i class="fab fa-squarespace"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="social-icon">
+                <i class="fab fa-behance"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="social-icon">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+          </ul>
+        </article>
+        <article class="hero-img">
+          <img src="./images/hero-img.jpeg" alt="" />
+        </article>
+      </div>
+    </header>
     <!-- end of header -->
     <!-- about -->
 
