Added the hero and about sections

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <h4>freelance web and mobile UI/UX Designer</h4>
           <a href="contact.html" class="btn hero-btn">hire me</a>
           <!-- social icons -->
-          <ul class="social-icons hero-icon">
+          <ul class="social-icons hero-icons">
             <li>
               <a href="#" class="social-icon">
                 <i class="fab fa-facebook"></i>
@@ -131,13 +131,46 @@
           </ul>
         </article>
         <article class="hero-img">
-          <img src="./images/hero-img.jpeg" alt="" />
+          <img src="./images/hero-img.jpeg" alt="" class="hero-photo" />
         </article>
       </div>
     </header>
     <!-- end of header -->
     <!-- about -->
-
+    <section class="section about">
+      <div class="section-center about-center">
+        <!-- about img -->
+        <article class="about-img">
+          <img src="./images/about-img.jpeg" alt="" class="hero-photo" />
+        </article>
+        <!-- about img -->
+        <article class="about-info">
+          <!-- section title -->
+          <div class="section-title about-title">
+            <h2>about</h2>
+            <div class="underline"></div>
+          </div>
+          <!-- end of section title -->
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti
+            minus repellat minima debitis aliquam, laudantium ducimus mollitia
+            perspiciatis nobis, dignissimos deserunt, porro eligendi totam sit
+            quis veritatis reprehenderit nam distinctio incidunt maxime
+            similique laboriosam error? Natus, iusto voluptatum! Deleniti,
+            suscipit!
+          </p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti
+            minus repellat minima debitis aliquam, laudantium ducimus mollitia
+            perspiciatis nobis, dignissimos deserunt, porro eligendi totam sit
+            quis veritatis reprehenderit nam distinctio incidunt maxime
+            similique laboriosam error? Natus, iusto voluptatum! Deleniti,
+            suscipit!
+          </p>
+          <a href="about.html" class="btn">about me</a>
+        </article>
+      </div>
+    </section>
     <!-- end of about -->
     <!-- services -->
 
