Updated the projects section

--- a/index.html
+++ b/index.html
@@ -173,10 +173,113 @@
     </section>
     <!-- end of about -->
     <!-- services -->
-
+    <section class="section bg-grey">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>services</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+      <div class="services-center section-center">
+        <!-- single service -->
+        <article class="service">
+          <i class="fas fa-code service-icon"></i>
+          <h4>web development</h4>
+          <div class="underline"></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum,
+            odio, doloremque laboriosam cum quaerat, commodi a ex quas
+            perspiciatis dolores amet vitae illum eius optio.
+          </p>
+        </article>
+        <!-- end of single service -->
+        <!-- single service -->
+        <article class="service">
+          <i class="fab fa-sketch service-icon"></i>
+          <h4>web design</h4>
+          <div class="underline"></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum,
+            odio, doloremque laboriosam cum quaerat, commodi a ex quas
+            perspiciatis dolores amet vitae illum eius optio.
+          </p>
+        </article>
+        <!-- end of single service -->
+        <!-- single service -->
+        <article class="service">
+          <i class="fab fa-android service-icon"></i>
+          <h4>app design</h4>
+          <div class="underline"></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum,
+            odio, doloremque laboriosam cum quaerat, commodi a ex quas
+            perspiciatis dolores amet vitae illum eius optio.
+          </p>
+        </article>
+        <!-- end of single service -->
+      </div>
+    </section>
     <!-- end of services -->
     <!-- projects -->
-
+    <section class="section projects">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>projects</h2>
+        <div class="underline"></div>
+        <p class="projects-text">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit,
+          necessitatibus nobis in vitae repellat porro accusamus officiis natus
+          sunt. Consequuntur nihil saepe eaque distinctio? Perspiciatis.
+        </p>
+      </div>
+      <!-- end of section title -->
+      <div class="section-center project-center">
+        <!-- single project -->
+        <a href="project.html" class="project-1">
+          <article class="project">
+            <img src="./images/project-1.jpeg" alt="" class="project-img" />
+            <div class="project-info">
+              <h4>project title</h4>
+              <p>client name</p>
+            </div>
+          </article>
+        </a>
+        <!-- end of single project -->
+        <!-- single project -->
+        <a href="project.html" class="project-2">
+          <article class="project">
+            <img src="./images/project-2.jpeg" alt="" class="project-img" />
+            <div class="project-info">
+              <h4>project title</h4>
+              <p>client name</p>
+            </div>
+          </article>
+        </a>
+        <!-- end of single project -->
+        <!-- single project -->
+        <a href="project.html" class="project-3">
+          <article class="project">
+            <img src="./images/project-3.jpeg" alt="" class="project-img" />
+            <div class="project-info">
+              <h4>project title</h4>
+              <p>client name</p>
+            </div>
+          </article>
+        </a>
+        <!-- end of single project -->
+        <!-- single project -->
+        <a href="project.html" class="project-4">
+          <article class="project">
+            <img src="./images/project-4.jpeg" alt="" class="project-img" />
+            <div class="project-info">
+              <h4>project title</h4>
+              <p>client name</p>
+            </div>
+          </article>
+        </a>
+        <!-- end of single project -->
+      </div>
+    </section>
     <!-- end of projects -->
     <!-- connect -->
 
