Added a video section

--- a/index.html
+++ b/index.html
@@ -282,7 +282,33 @@
     </section>
     <!-- end of projects -->
     <!-- connect -->
-
+    <section class="connect">
+      <video
+        control
+        autoplay
+        muted
+        loop
+        class="video-container"
+        poster="./images/project-1.jpeg"
+      >
+        <source src="./videos/connect.mp4" type="video/mp4" />
+        Sorry, you browser does not support embedded videos
+      </video>
+      <div class="video-banner">
+        <!-- section title -->
+        <div class="section-title">
+          <h2>let's get in touch</h2>
+          <div class="underline"></div>
+        </div>
+        <p class="video-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+          repudiandae vero, quasi asperiores ab dolores saepe laboriosam id
+          deserunt officiis nisi voluptas magni laborum itaque. Reiciendis nihil
+          fugiat vitae voluptatum dolorum quasi, autem tempore eius inventore
+          suscipit ex quae nostrum.
+        </p>
+      </div>
+    </section>
     <!-- end of connect -->
     <!-- skills -->
 
