--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         class="video-container"
         poster="./images/project-1.jpeg"
       >
-        <source src="./videos/connect.mp4" type="video/mp4" />
+        <!-- <source src="./videos/connect.mp4" type="video/mp4" /> -->
         Sorry, you browser does not support embedded videos
       </video>
       <div class="video-banner">
@@ -307,6 +307,7 @@
           fugiat vitae voluptatum dolorum quasi, autem tempore eius inventore
           suscipit ex quae nostrum.
         </p>
+        <a href="contact.html" class="btn">contact me</a>
       </div>
     </section>
     <!-- end of connect -->
