--- a/index.html
+++ b/index.html
@@ -312,13 +312,178 @@
     </section>
     <!-- end of connect -->
     <!-- skills -->
-
+    <div class="section section skills">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>skills</h2>
+        <div class="underline"></div>
+      </div>
+      <div class="section-center skills-center">
+        <article>
+          <h3>front end</h3>
+          <!-- single skill -->
+          <div class="skill">
+            <p>Javascript</p>
+            <div class="skill-container">
+              <div class="skill-value"></div>
+              <p class="skill-text">70%</p>
+            </div>
+          </div>
+          <!-- end of single skill -->
+          <!-- single skill -->
+          <div class="skill">
+            <p>React</p>
+            <div class="skill-container">
+              <div class="skill-value value-70"></div>
+              <p class="skill-text skill-text-70">70%</p>
+            </div>
+          </div>
+          <!-- end of single skill -->
+          <!-- single skill -->
+          <div class="skill">
+            <p>html/css</p>
+            <div class="skill-container">
+              <div class="skill-value value-80"></div>
+              <p class="skill-text skill-text-80">80%</p>
+            </div>
+          </div>
+          <!-- end of single skill -->
+        </article>
+        <article>
+          <h3>back end</h3>
+          <!-- single skill -->
+          <div class="skill">
+            <p>node</p>
+            <div class="skill-container">
+              <div class="skill-value"></div>
+              <p class="skill-text">70%</p>
+            </div>
+          </div>
+          <!-- end of single skill -->
+          <!-- single skill -->
+          <div class="skill">
+            <p>php</p>
+            <div class="skill-container">
+              <div class="skill-value value-70"></div>
+              <p class="skill-text skill-text-70">70%</p>
+            </div>
+          </div>
+          <!-- end of single skill -->
+          <!-- single skill -->
+          <div class="skill">
+            <p>python</p>
+            <div class="skill-container">
+              <div class="skill-value value-80"></div>
+              <p class="skill-text skill-text-80">80%</p>
+            </div>
+          </div>
+          <!-- end of single skill -->
+        </article>
+      </div>
+      <!-- end of section title -->
+    </div>
     <!-- end of skills -->
     <!-- timeline -->
-
+    <section class="section timeline">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>timeline</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+      <div class="section-center timeline-center">
+        <!-- single timeline item -->
+        <article class="timeline-item">
+          <h4>2020</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam
+            corrupti enim voluptatibus facilis architecto, corporis sapiente
+            nesciunt aperiam voluptatem eaque eos tempore officia accusantium
+          </p>
+          <span class="number">1</span>
+        </article>
+        <!-- end of single timeline item -->
+        <!-- single timeline item -->
+        <article class="timeline-item">
+          <h4>2019</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam
+            corrupti enim voluptatibus facilis architecto, corporis sapiente
+            nesciunt aperiam voluptatem eaque eos tempore officia accusantium
+          </p>
+          <span class="number">2</span>
+        </article>
+        <!-- end of single timeline item -->
+        <!-- single timeline item -->
+        <article class="timeline-item">
+          <h4>2018</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam
+            corrupti enim voluptatibus facilis architecto, corporis sapiente
+            nesciunt aperiam voluptatem eaque eos tempore officia accusantium
+          </p>
+          <span class="number">3</span>
+        </article>
+        <!-- end of single timeline item -->
+        <!-- single timeline item -->
+        <article class="timeline-item">
+          <h4>2017</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam
+            corrupti enim voluptatibus facilis architecto, corporis sapiente
+            nesciunt aperiam voluptatem eaque eos tempore officia accusantium
+          </p>
+          <span class="number">4</span>
+        </article>
+        <!-- end of single timeline item -->
+        <!-- single timeline item -->
+        <article class="timeline-item">
+          <h4>2016</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam
+            corrupti enim voluptatibus facilis architecto, corporis sapiente
+            nesciunt aperiam voluptatem eaque eos tempore officia accusantium
+          </p>
+          <span class="number">5</span>
+        </article>
+        <!-- end of single timeline item -->
+        <!-- single timeline item -->
+        <article class="timeline-item">
+          <h4>2015</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam
+            corrupti enim voluptatibus facilis architecto, corporis sapiente
+            nesciunt aperiam voluptatem eaque eos tempore officia accusantium
+          </p>
+          <span class="number">6</span>
+        </article>
+        <!-- end of single timeline item -->
+      </div>
+    </section>
     <!--end of  timeline -->
     <!-- blog -->
-
+    <section class="section blog">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>blog</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+      <div class="section-center blog-center">
+        <!-- single article -->
+        <div class="card">
+          <!-- front of the card -->
+          <div class="card-side card-front">
+            <h4>card front</h4>
+          </div>
+          <!-- card back -->
+          <div class="card-side card-back">
+            <h4>card back</h4>
+          </div>
+        </div>
+        <!-- end of single article -->
+      </div>
+    </section>
     <!--end of  blog -->
     <!-- footer -->
 
