--- a/index.html
+++ b/index.html
@@ -474,11 +474,119 @@
         <div class="card">
           <!-- front of the card -->
           <div class="card-side card-front">
-            <h4>card front</h4>
+            <img src="./images/project-1.jpeg" alt="" />
+            <div class="card-info">
+              <h4>article title</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                vel vero repudiandae facere? A ad reprehenderit iusto, labore
+                voluptas qui.
+              </p>
+              <div class="card-footer">
+                <img src="./images/hero-img-small.jpeg" alt="" />
+                <p>7 min read</p>
+              </div>
+            </div>
           </div>
           <!-- card back -->
           <div class="card-side card-back">
-            <h4>card back</h4>
+            <button class="btn">read more</button>
+          </div>
+        </div>
+        <!-- end of single article -->
+        <!-- single article -->
+        <div class="card">
+          <!-- front of the card -->
+          <div class="card-side card-front">
+            <img src="./images/project-1.jpeg" alt="" />
+            <div class="card-info">
+              <h4>article title</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                vel vero repudiandae facere? A ad reprehenderit iusto, labore
+                voluptas qui.
+              </p>
+              <div class="card-footer">
+                <img src="./images/hero-img-small.jpeg" alt="" />
+                <p>7 min read</p>
+              </div>
+            </div>
+          </div>
+          <!-- card back -->
+          <div class="card-side card-back">
+            <button class="btn">read more</button>
+          </div>
+        </div>
+        <!-- end of single article -->
+        <!-- single article -->
+        <div class="card">
+          <!-- front of the card -->
+          <div class="card-side card-front">
+            <img src="./images/project-2.jpeg" alt="" />
+            <div class="card-info">
+              <h4>article title</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                vel vero repudiandae facere? A ad reprehenderit iusto, labore
+                voluptas qui.
+              </p>
+              <div class="card-footer">
+                <img src="./images/hero-img-small.jpeg" alt="" />
+                <p>7 min read</p>
+              </div>
+            </div>
+          </div>
+          <!-- card back -->
+          <div class="card-side card-back">
+            <button class="btn">read more</button>
+          </div>
+        </div>
+        <!-- end of single article -->
+        <!-- single article -->
+        <div class="card">
+          <!-- front of the card -->
+          <div class="card-side card-front">
+            <img src="./images/project-3.jpeg" alt="" />
+            <div class="card-info">
+              <h4>article title</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                vel vero repudiandae facere? A ad reprehenderit iusto, labore
+                voluptas qui.
+              </p>
+              <div class="card-footer">
+                <img src="./images/hero-img-small.jpeg" alt="" />
+                <p>7 min read</p>
+              </div>
+            </div>
+          </div>
+          <!-- card back -->
+          <div class="card-side card-back">
+            <button class="btn">read more</button>
+          </div>
+        </div>
+        <!-- end of single article -->
+        <!-- single article -->
+        <div class="card">
+          <!-- front of the card -->
+          <div class="card-side card-front">
+            <img src="./images/project-4.jpeg" alt="" />
+            <div class="card-info">
+              <h4>article title</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                vel vero repudiandae facere? A ad reprehenderit iusto, labore
+                voluptas qui.
+              </p>
+              <div class="card-footer">
+                <img src="./images/hero-img-small.jpeg" alt="" />
+                <p>7 min read</p>
+              </div>
+            </div>
+          </div>
+          <!-- card back -->
+          <div class="card-side card-back">
+            <button class="btn">read more</button>
           </div>
         </div>
         <!-- end of single article -->
@@ -486,7 +594,37 @@
     </section>
     <!--end of  blog -->
     <!-- footer -->
-
+    <div class="footer">
+      <!-- social icons -->
+      <ul class="social-icons">
+        <li>
+          <a href="#" class="social-icon">
+            <i class="fab fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-icon">
+            <i class="fab fa-linkedin"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-icon">
+            <i class="fab fa-squarespace"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-icon">
+            <i class="fab fa-behance"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-icon">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </li>
+      </ul>
+      <p>&copy; <span id="date"></span> john doe. all rights reserved</p>
+    </div>
     <script src="./js/app.js"></script>
   </body>
 </html>
