--- a/projects.html
+++ b/projects.html
@@ -103,7 +103,7 @@
         <article class="single-project">
           <div class="project-container">
             <img src="./images/project-1.jpeg" alt="" />
-            <a href="#">
+            <a href="#" class="project-icon">
               <i class="fas fa-home"></i>
             </a>
           </div>
